--- a/index.org
+++ b/index.org
@@ -22,9 +22,9 @@ messages, BBDB entries, and any files related to the projects.  For
 printing and sharing of notes, an Org-mode file can be exported as a
 structured ASCII file, HTML, and LaTeX.
 
-* Current Version (6.02pre02) and Compatibility
+* Current Version (6.01d) and Compatibility
 
-The current version is 6.02pre02.  To see what has changed in recent
+The current version is 6.01d.  To see what has changed in recent
 releases, check this [[file:Changes.html][list of user-visible changes]].  These descriptions
 are extensive, to avoid that people will be printing the manual after
 each incremental release.  If you have an older version of the manual,
@@ -40,7 +40,7 @@ but may lag a bit behind the website release.
 
 **** Distribution
 
-Download as [[file:org-6.02pre02.zip][zip file]] or [[file:org-6.02pre02.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.01d.zip][zip file]] or [[file:org-6.01d.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
@@ -175,7 +175,8 @@ contribute your own setup, screenshots, tutorials etc, please go to
 
     - [[http://www.cognition.ens.fr/~guerry/u/org2rem.el][From Org-mode to remind]] by [[http://www.cognition.ens.fr/~guerry/][Bastien Guerry]].
       
-    - [[file:org-6.00pre-5.][From Org-mode to Freemind]] by Marco Vezzoli.
+    - From Org-mode to Freemind by Marco Vezzoli, this is available in
+      the contrib directory of the distribution.
 
 *** XXX to Org-mode
 
