Make the list of changes use org-info.js.

--- a/Changes.org
+++ b/Changes.org
@@ -3,7 +3,8 @@
 #+TITLE: Org-mode list of user-visible changes
 #+AUTHOR:  Carsten Dominik
 #+EMAIL:  carsten at orgmode dot org
-#+OPTIONS: H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:{} *:t TeX:t LaTeX:nil
+#+OPTIONS: H:3 num:nil toc:t \n:nil @:t ::t |:t ^:{} *:t TeX:t LaTeX:nil
+#+INFOJS_OPT: view:info toc:1 path:org-info.js
 
 * Version 6.01
 
