--- a/Changes.org
+++ b/Changes.org
@@ -10,55 +10,17 @@
 
 * Version 6.02
 
+** Overview
+
+   - Column view (mostly) works now in XEmacs
+   - Summaries for columns in the agenda
+   - The special property Effort can be used for effort estimates
+   - New operators for property searches
+   - Search commands can now include archive files.
+   - Clock tables can include the archive files
+   - Orgtbl radio tables generalized.
+
 ** Details
-
-*** Search commands can now include archive files.
-
-    If the value of the customization variable
-    =org-agenda-text-search-extra-files= contains the symbol
-    =agenda-archives= as the first element in the list, all
-    archive files of all agenda files will be added to the list
-    of files to search.  This is relevant for the search view
-    =C-c a s=, as well as for the agenda files multi-occur
-    command =C-c a /=.
-
-*** Clock tables can include the archive files
-
-    There are new values for the =:scope= parameter of a clock
-    table.  This can now be =file-with-archives= and
-    =agenda-with-archives=, in order to collect information not
-    only from the current file or all agenda files, but also from
-    all archive files that are currently used by these files.
-
-*** New operators for property searches
-
-    Property searches can now choose a number of different
-    operators for comparing values.  These operators are `=',
-    `<>', `<', `<=', `>', and `>='.
-
-    When the search term uses the operator with plain number like
-    =+Effort>=2.7=, then the property value is converted to a
-    number and a numerical comparison takes place.
-
-    When the search term uses a string on the right hand side of
-    the operator, a string comparison is done: =+PRIORITY<"C".=
-
-    Finally, if the right hand side is enclosed in curly braces,
-    a regexp match is done: =aaa={regexp}=.  In this case you
-    should use only the `=' or `<>' operators, meaning "does
-    match" or "does not match", respectively.
-
-    This was a triggered with a request by Dan Davison.
-
-*** Orgtbl radio tables generalized.
-
-    The options available for radio tables using orgtbl-mode have
-    been expanded.  You may use several reception points and
-    formats for the same table, you may have special formatting
-    in the last line of the table,  and many table parameters may
-    be functions, so that more general transformations are
-    possible.  Jason Riedy provided a patch for this, and he will
-    hopefully come up with some examples.  Thanks!
 
 *** Column view works now in XEmacs
 
@@ -97,6 +59,54 @@
     property =Effort=, displayed side-to-side with clock sums,
     and also be summed over a day, in order to show the planned
     work load of a day.  See the manual for more details.
+
+*** New operators for property searches
+
+    Property searches can now choose a number of different
+    operators for comparing values.  These operators are `=',
+    `<>', `<', `<=', `>', and `>='.
+
+    When the search term uses the operator with plain number like
+    =+Effort>=2.7=, then the property value is converted to a
+    number and a numerical comparison takes place.
+
+    When the search term uses a string on the right hand side of
+    the operator, a string comparison is done: =+PRIORITY<"C".=
+
+    Finally, if the right hand side is enclosed in curly braces,
+    a regexp match is done: =aaa={regexp}=.  In this case you
+    should use only the `=' or `<>' operators, meaning "does
+    match" or "does not match", respectively.
+
+    This was a triggered with a request by Dan Davison.
+
+*** Search commands can now include archive files.
+
+    If the value of the customization variable
+    =org-agenda-text-search-extra-files= contains the symbol
+    =agenda-archives= as the first element in the list, all
+    archive files of all agenda files will be added to the list
+    of files to search.  This is relevant for the search view
+    =C-c a s=, as well as for the agenda files multi-occur
+    command =C-c a /=.
+
+*** Clock tables can include the archive files
+
+    There are new values for the =:scope= parameter of a clock
+    table.  This can now be =file-with-archives= and
+    =agenda-with-archives=, in order to collect information not
+    only from the current file or all agenda files, but also from
+    all archive files that are currently used by these files.
+
+*** Orgtbl radio tables generalized.
+
+    The options available for radio tables using orgtbl-mode have
+    been expanded.  You may use several reception points and
+    formats for the same table, you may have special formatting
+    in the last line of the table,  and many table parameters may
+    be functions, so that more general transformations are
+    possible.  Jason Riedy provided a patch for this, and he will
+    hopefully come up with some examples.  Thanks!
 
 * Version 6.01
 
