--- a/index.org
+++ b/index.org
@@ -22,9 +22,9 @@ messages, BBDB entries, and any files related to the projects.  For
 printing and sharing of notes, an Org-mode file can be exported as a
 structured ASCII file, HTML, and LaTeX.
 
-* Current Version (6.02a) and Compatibility
+* Current Version (6.02b) and Compatibility
 
-The current version is 6.02a.  To see what has changed in recent
+The current version is 6.02b.  To see what has changed in recent
 releases, check this [[file:Changes.html][list of user-visible changes]].  These descriptions
 are extensive, to avoid that people will be printing the manual after
 each incremental release.  If you have an older version of the manual,
@@ -40,7 +40,7 @@ but may lag a bit behind the website release.
 
 **** Distribution
 
-Download as [[file:org-6.02a.zip][zip file]] or [[file:org-6.02a.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.02b.zip][zip file]] or [[file:org-6.02b.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
